// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game core figures have right move patterns 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -23,11 +23,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,22 +24,17 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -45,11 +45,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-3\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -60,11 +60,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-4\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -75,11 +75,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-5\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 8`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -88,18 +88,22 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"0-7\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 9`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -110,11 +110,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-0\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -228,11 +228,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
        />
@@ -268,11 +272,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
        />"
`;

exports[`Game core figures have right move patterns 10`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -125,11 +125,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-1\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -233,11 +233,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
        />
@@ -273,11 +277,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
        />"
`;

exports[`Game core figures have right move patterns 11`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -140,11 +140,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-2\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -238,11 +238,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
        />
@@ -278,11 +282,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
        />"
`;

exports[`Game core figures have right move patterns 12`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -155,11 +155,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-3\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -243,11 +243,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
        />
@@ -283,11 +287,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
        />"
`;

exports[`Game core figures have right move patterns 13`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -170,11 +170,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-4\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -248,11 +248,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
        />
@@ -288,11 +292,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
        />"
`;

exports[`Game core figures have right move patterns 14`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -185,11 +185,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-5\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -253,11 +253,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
        />
@@ -293,11 +297,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
        />"
`;

exports[`Game core figures have right move patterns 15`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -200,11 +200,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"1-6\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -258,11 +258,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"2-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
        />
@@ -298,11 +302,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
        />"
`;

exports[`Game core figures have right move patterns 16`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -215,11 +215,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"1-7\\"
        >
          <div
-           class=\\"sc-bdnyFh leaQvT\\"
+           class=\\"sc-bdnyFh jcZexO\\"
            side=\\"white\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -263,11 +263,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"2-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"3-0\\"
        />
@@ -303,11 +307,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"3-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
        />"
`;

exports[`Game core figures have right move patterns 17`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 18`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 19`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 20`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 21`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 22`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 23`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 24`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 25`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 26`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 27`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 28`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 29`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 30`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 31`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 32`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 33`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 34`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 35`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 36`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 37`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 38`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 39`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 40`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 41`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 42`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 43`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 44`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 45`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 46`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 47`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 48`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >"
`;

exports[`Game core figures have right move patterns 49`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -308,11 +308,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
        />
@@ -348,11 +352,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
        />
@@ -390,11 +398,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 50`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -313,11 +313,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
        />
@@ -353,11 +357,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
        />
@@ -405,11 +413,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-1\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 51`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -318,11 +318,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
        />
@@ -358,11 +362,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-2\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
        />
@@ -420,11 +428,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-2\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 52`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -323,11 +323,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
        />
@@ -363,11 +367,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-3\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
        />
@@ -435,11 +443,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-3\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 53`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -328,11 +328,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
        />
@@ -368,11 +372,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-4\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
        />
@@ -450,11 +458,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-4\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 54`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -333,11 +333,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
        />
@@ -373,11 +377,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-5\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
        />
@@ -465,11 +473,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-5\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 55`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -338,11 +338,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"4-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
        />
@@ -378,11 +382,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
        />
@@ -480,11 +488,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-6\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 56`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -343,11 +343,15 @@
        />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"4-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"5-0\\"
        />
@@ -383,11 +387,15 @@
        />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"5-7\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"6-0\\"
        >
@@ -495,11 +503,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"6-7\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 57`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -510,11 +510,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\"
@@ -523,11 +523,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-1\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >"
`;

exports[`Game core figures have right move patterns 58`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >"
`;

exports[`Game core figures have right move patterns 59`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -20,15 +25,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
-       <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,22 +524,17 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 60`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -20,15 +25,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
-       <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
@@ -545,11 +545,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-3\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 61`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -20,15 +25,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
-       <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
@@ -560,11 +560,11 @@
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-4\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 62`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -20,15 +25,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
-       <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
@@ -575,11 +575,11 @@
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-5\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core figures have right move patterns 63`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -19,15 +24,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >"
`;

exports[`Game core figures have right move patterns 64`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,15 @@
      >
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy jhSroJ\\"
+         color=\\"white\\"
+         data-testid=\\"0-1\\"
        >
          <div
            class=\\"sc-bdnyFh leaQvT\\"
            side=\\"white\\"
          >
@@ -20,15 +25,10 @@
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
        <div
-         class=\\"sc-gtsqUy jhSroJ\\"
-         color=\\"white\\"
-         data-testid=\\"0-1\\"
-       />
-       <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"0-2\\"
        >
          <div
@@ -508,10 +508,15 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-0\\"
+       />
+       <div
+         class=\\"sc-gtsqUy cKTvcv\\"
+         color=\\"black\\"
+         data-testid=\\"7-1\\"
        >
          <div
            class=\\"sc-bdnyFh iFMPlL\\"
            side=\\"black\\"
          >
@@ -519,15 +524,10 @@
              alt=\\"\\"
              src=\\"test-file-stub\\"
            />
          </div>
        </div>
-       <div
-         class=\\"sc-gtsqUy cKTvcv\\"
-         color=\\"black\\"
-         data-testid=\\"7-1\\"
-       />
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-2\\"
        >
@@ -588,18 +588,22 @@
        </div>
        <div
          class=\\"sc-gtsqUy jhSroJ\\"
          color=\\"white\\"
          data-testid=\\"7-6\\"
+       >
+         <div
+           class=\\"sc-dlniIP eIaIwO\\"
          />
+       </div>
        <div
          class=\\"sc-gtsqUy cKTvcv\\"
          color=\\"black\\"
          data-testid=\\"7-7\\"
        >
          <div
-           class=\\"sc-bdnyFh iFMPlL\\"
+           class=\\"sc-bdnyFh gAkUhO\\"
            side=\\"black\\"
          >
            <img
              alt=\\"\\"
              src=\\"test-file-stub\\""
`;

exports[`Game core should render board with start positions 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO gkqyRK"
    data-testid="chess-board"
  >
    <div
      class="sc-eCAqax hnnYBr"
    >
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-0"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-2"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-3"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-4"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-5"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="0-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="0-7"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-0"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-1"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-2"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-3"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-4"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-5"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="1-6"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="1-7"
      >
        <div
          class="sc-bdnyFh leaQvT"
          side="white"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="2-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="2-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="3-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="3-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-0"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-1"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-2"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-3"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-4"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-5"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="4-6"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="4-7"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-0"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-2"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-3"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-4"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-5"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="5-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="5-7"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-0"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-1"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-2"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-3"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-4"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-5"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="6-6"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="6-7"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-0"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-1"
      />
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-2"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-3"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-4"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-5"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="sc-gtsqUy jhSroJ"
        color="white"
        data-testid="7-6"
      />
      <div
        class="sc-gtsqUy cKTvcv"
        color="black"
        data-testid="7-7"
      >
        <div
          class="sc-bdnyFh iFMPlL"
          side="black"
        >
          <img
            alt=""
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
